--- a/App/css/responsive.css
+++ b/App/css/responsive.css
@@ -6,8 +6,13 @@
     }
 
     main {
-        max-width: 90%;
+        max-width: 100%;
         margin: 0 auto;
+    }
+
+    /*** INTRODUCTION PAGE ***/
+    .greyTextBaner {
+        font-size: 20px;
     }
 }
 
@@ -59,10 +64,16 @@
         margin: 0 auto;
     }
 
-    /*** SIGN PAGES ***/
-    .signTitle {
+    .hideTitle {
         display: none;
     }
+
+    .hideTitle + p {
+        margin-top: 40px;
+    }
+
+    /*** SIGN PAGES ***/
+
 
     .signSection {
         margin-top: 50px;
@@ -73,5 +84,12 @@
             max-width: 1440px;
             margin: 0 auto;
         }
+    }
+
+    /*** INTRODUCTION PAGE ***/
+    .greyTextBaner {
+        max-width: 921.6px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
