Budget mobile in portrait mode ready

--- a/App/css/master.css
+++ b/App/css/master.css
@@ -382,6 +382,12 @@ span.passwordOk {
 
 /* To budget */
 
+.budgetDescription, .groupAmountHidable, .categoryAmountHidable {
+    display: none;
+}
+
+
+
 .toBudgetDiv {
     background-color: var(--orange);
     display: flex;
