--- a/App/css/responsive.css
+++ b/App/css/responsive.css
@@ -92,6 +92,19 @@
     .tranAccept {
         width: 10%;
     }
+
+    /*** SETTINGS ***/
+
+    /* Tabs */
+
+    .settingsModal {
+        max-width: 50%;
+        position: absolute;
+        top: -450px;
+        left: 25%;
+        margin: 0 auto;
+        box-shadow: 0px 0px 20px 1px #888;
+    }
 }
 
 @media screen and (min-width: 768px) {
