--- a/App/css/master.css
+++ b/App/css/master.css
@@ -361,10 +361,27 @@ span.formErrorMsg.ok {
 
 /*** BUDGET ***/
 
+/* slightly transparent fallback */
+.budgetHeader {
+    background-color: rgba(67, 67, 90, .9);
+}
+
+/* if backdrop support: very transparent and blurred */
+@supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
+    .budgetHeader {
+        background-color: rgba(67, 67, 90, .5);
+        -webkit-backdrop-filter: blur(2em);
+        backdrop-filter: blur(2em);
+    }
+}
+
 .budgetHeader, .transactionsHeader {
-    background-color: var(--darkGrey);
     color: #fff;
     padding: 5px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 /* Budget header */
@@ -442,6 +459,10 @@ span.formErrorMsg.ok {
 }
 
 /* Budget table */
+
+.budgetTableSection {
+    padding-top: 105px;
+}
 
 table.budgetTable {
     width: 100%;
