--- a/App/css/responsive.css
+++ b/App/css/responsive.css
@@ -120,13 +120,18 @@
 
     /* Tabs */
 
-    .settingsModal {
+    .settingsModal, .newAccountModal {
         max-width: 50%;
         position: absolute;
         top: -500px;
         left: 25%;
         margin: 0 auto;
         box-shadow: 0px 0px 20px 1px #888;
+    }
+
+    .newAccountModal {
+        top: -700px;
+        position: fixed;
     }
 }
 
@@ -241,6 +246,7 @@
         left: 0;
         position: static;
         box-shadow: none;
+        display: flex;
     }
 
     .mainMenuContainer .closeSign {
